# esmark-parser

./: .gitignore  README.md  esmark-parser.py  pyproject.toml  requirements.txt
